tests/transpiler/x/hs/map_nested_assign.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/map_nested_assign.hs:10:38: error:
    • Couldn't match type ‘[Char]’ with ‘Int’
      Expected: Int
        Actual: String
    • In the second argument of ‘(!!)’, namely ‘"inner"’
      In the first argument of ‘print’, namely
        ‘(((_data Map.! "outer") !! "inner"))’
      In a stmt of a 'do' block:
        print (((_data Map.! "outer") !! "inner"))
   |
10 |     print (((_data Map.! "outer") !! "inner"))
   |                                      ^^^^^^^
